@@ -53,7 +53,7 @@ final class SegmentCoreReaders {
   final FieldsProducer fields;
   final DocValuesProducer normsProducer;
 
-  private final SegmentReader owner;
+  private final Object ownerCoreCacheKey;
   
   final StoredFieldsReader fieldsReaderOrig;
   final TermVectorsReader termVectorsReaderOrig;
@@ -88,7 +88,12 @@ final class SegmentCoreReaders {
       Collections.synchronizedSet(new LinkedHashSet<CoreClosedListener>());
   
   SegmentCoreReaders(SegmentReader owner, Directory dir, SegmentInfoPerCommit si, IOContext context) throws IOException {
-    
+
+    // SegmentReader uses us as the coreCacheKey; we cannot
+    // call owner.getCoreCacheKey() because that will return
+    // null!:
+    this.ownerCoreCacheKey = this;
+
     final Codec codec = si.info.getCodec();
     final Directory cfsDir; // confusing name: if (cfs) its the cfsdir, otherwise its the segment's directory.
 
@@ -134,12 +139,6 @@ final class SegmentCoreReaders {
         decRef();
       }
     }
-    
-    // Must assign this at the end -- if we hit an
-    // exception above core, we don't want to attempt to
-    // purge the FieldCache (will hit NPE because core is
-    // not assigned yet).
-    this.owner = owner;
   }
   
   int getRefCount() {
@@ -176,7 +175,7 @@ final class SegmentCoreReaders {
   private void notifyCoreClosedListeners() {
     synchronized(coreClosedListeners) {
       for (CoreClosedListener listener : coreClosedListeners) {
-        listener.onClose(owner);
+        listener.onClose(ownerCoreCacheKey);
       }
     }
   }
@@ -195,10 +194,5 @@ final class SegmentCoreReaders {
         ((fields!=null) ? fields.ramBytesUsed() : 0) + 
         ((fieldsReaderOrig!=null)? fieldsReaderOrig.ramBytesUsed() : 0) + 
         ((termVectorsReaderOrig!=null) ? termVectorsReaderOrig.ramBytesUsed() : 0);
-  }
-  
-  @Override
-  public String toString() {
-    return "SegmentCoreReader(owner=" + owner + ")";
   }
 }
